--- a/devicehive-docker-3.5.0/rdbms-image/docker-compose.yml
+++ b/devicehive-docker-3.5.0/rdbms-image/docker-compose.yml
@@ -41,38 +41,38 @@ services:
     ports:
       - "5050:80"
 
-  dh_plugin:
-      image: yingjunluo/devicehive-plugin:latest
-      ports:
-        - "${DH_PLUGIN_PORT:-8110}:8110"
-      links:
-        - "postgres"
-        - "kafka"
-        - "zookeeper"
-        - "dh_frontend"
-        - "dh_auth"
-        - "wsproxy"
-      restart: unless-stopped
-      environment:
-        DH_ZK_ADDRESS: ${DH_ZK_ADDRESS:-zookeeper}
-        DH_ZK_PORT: ${DH_ZK_PORT:-2181}
-        DH_KAFKA_BOOTSTRAP_SERVERS: ${DH_KAFKA_BOOTSTRAP_SERVERS:-kafka:9092}
-        DH_POSTGRES_ADDRESS: ${DH_POSTGRES_ADDRESS:-postgres}
-        DH_POSTGRES_PORT: ${DH_POSTGRES_PORT:-5432}
-        DH_POSTGRES_USERNAME: ${DH_POSTGRES_USERNAME:-postgres}
-        DH_POSTGRES_PASSWORD: ${DH_POSTGRES_PASSWORD:-mysecretpassword}
-        DH_POSTGRES_DB: ${DH_POSTGRES_DB:-postgres}
-        DH_RPC_CLIENT_RES_CONS_THREADS: ${DH_RPC_CLIENT_RES_CONS_THREADS:-3}
-        DH_LOG_LEVEL: ${DH_LOG_LEVEL:-INFO}
-        ROOT_LOG_LEVEL: ${ROOT_LOG_LEVEL:-WARN}
-        DH_WS_PROXY: wsproxy:3000
-        DH_PROXY_PLUGIN_CONNECT: ${DH_PROXY_PLUGIN_CONNECT:-ws://localhost/plugin/proxy}
-        DH_AUTH_URL: http://dh_auth:8090/auth/rest
-        HC_MEMBERS: hazelcast
-        HC_GROUP_NAME: ${HC_GROUP_NAME:-dev}
-        HC_GROUP_PASSWORD: ${HC_GROUP_PASSWORD:-dev-pass}
-        JWT_SECRET: ${JWT_SECRET:-devicehive}
-        SPRING_PROFILES_ACTIVE: ${DH_PLUGIN_SPRING_PROFILES_ACTIVE:-ws-kafka-proxy}
+  # dh_plugin:
+  #     image: yingjunluo/devicehive-plugin:latest
+  #     ports:
+  #       - "${DH_PLUGIN_PORT:-8110}:8110"
+  #     links:
+  #       - "postgres"
+  #       - "kafka"
+  #       - "zookeeper"
+  #       - "dh_frontend"
+  #       - "dh_auth"
+  #       - "wsproxy"
+  #     restart: unless-stopped
+  #     environment:
+  #       DH_ZK_ADDRESS: ${DH_ZK_ADDRESS:-zookeeper}
+  #       DH_ZK_PORT: ${DH_ZK_PORT:-2181}
+  #       DH_KAFKA_BOOTSTRAP_SERVERS: ${DH_KAFKA_BOOTSTRAP_SERVERS:-kafka:9092}
+  #       DH_POSTGRES_ADDRESS: ${DH_POSTGRES_ADDRESS:-postgres}
+  #       DH_POSTGRES_PORT: ${DH_POSTGRES_PORT:-5432}
+  #       DH_POSTGRES_USERNAME: ${DH_POSTGRES_USERNAME:-postgres}
+  #       DH_POSTGRES_PASSWORD: ${DH_POSTGRES_PASSWORD:-mysecretpassword}
+  #       DH_POSTGRES_DB: ${DH_POSTGRES_DB:-postgres}
+  #       DH_RPC_CLIENT_RES_CONS_THREADS: ${DH_RPC_CLIENT_RES_CONS_THREADS:-3}
+  #       DH_LOG_LEVEL: ${DH_LOG_LEVEL:-INFO}
+  #       ROOT_LOG_LEVEL: ${ROOT_LOG_LEVEL:-WARN}
+  #       DH_WS_PROXY: wsproxy:3000
+  #       DH_PROXY_PLUGIN_CONNECT: ${DH_PROXY_PLUGIN_CONNECT:-ws://localhost/plugin/proxy}
+  #       DH_AUTH_URL: http://dh_auth:8090/auth/rest
+  #       HC_MEMBERS: hazelcast
+  #       HC_GROUP_NAME: ${HC_GROUP_NAME:-dev}
+  #       HC_GROUP_PASSWORD: ${HC_GROUP_PASSWORD:-dev-pass}
+  #       JWT_SECRET: ${JWT_SECRET:-devicehive}
+  #       SPRING_PROFILES_ACTIVE: ${DH_PLUGIN_SPRING_PROFILES_ACTIVE:-ws-kafka-proxy}
         
   wsproxy:
     image: devicehive/devicehive-ws-proxy:${DH_WS_PROXY_TAG:-1.1.0}
